Changed templates, fixed posts not showing on about

--- a/app/public/wp-content/themes/pokemon-child/style.css
+++ b/app/public/wp-content/themes/pokemon-child/style.css
@@ -78,6 +78,10 @@ Text Domain:  pokemon-child
     width: 100% !important;
 } */
 
+.page-title{
+    text-align: center;
+}
+
 tr:nth-child(even) {
     background-color: #f2f2f2;
 }
@@ -200,7 +204,7 @@ audio {
     justify-content: space-between;
 }
 
-.post {
+.posts .post {
     max-width: 600px;
     min-width: 200px;
     height: auto;
